# snow

./: README.md  flake.nix  tokyonight.yaml
devshells/python/: flake.nix  pyproject.toml
devshells/rust/: flake.nix
home-manager/: home.nix  zsh.nix
home-manager/dots/alacritty/: alacritty.toml
home-manager/dots/fastfetch/: config.jsonc
home-manager/dots/ghostty/: config
home-manager/dots/helix/: config.toml  languages.toml  tokyonight_transparent.toml
home-manager/dots/i3status-rust/: config.toml
home-manager/dots/joshuto/: joshuto.toml
home-manager/dots/nu/: config.nu
home-manager/dots/rofi/: config.rasi
home-manager/dots/scripts/: battery.sh  bluetooth_menu  player.sh  power_menu
home-manager/dots/starship/: custom.toml  nerd_font_symbols.toml  starship.toml
home-manager/dots/waybar/: config.jsonc  style.css
home-manager/modules/: direnv.nix  dots.nix  dunst.nix  fzf.nix  helix.nix  i3.nix  mako.nix  mod.nix  niri.nix  rofi.nix  scripts.nix  starship.nix  stylix.nix  sway.nix  waybar.nix  zsh.nix
home-manager/themes/: tokyo-night-custom.yaml
nixos/: configuration.nix  hardware-configuration.nix  nvidia.nix  packages.nix
nixos/modules/: bluetooth.nix  greetd.nix  i3.nix  lightdm.nix  mod.nix  network.nix  niri.nix  stylix.nix  sway.nix
