[project]
name = "wikirecommender"
version = "0.1.0"
description = "WikiRecommender"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

# [project.scripts]
# hello = "hello_world:hello"
#
# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.6.7",
]
